--- a/dcool/src/main/resources/static/html/usercontent.html
+++ b/dcool/src/main/resources/static/html/usercontent.html
@@ -6,13 +6,29 @@
     <link rel="stylesheet" href="../css/main.css">
     <!-- Bootstrap -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .userContentDiv{
+            width: 80%;
+            height: 200px;
+            margin-bottom: 10px;
+        }
+
+        .userContentDiv Photo{
+            background-color: aquamarine;
+        }
+
+        .userContentDiv Music{
+            background-color: lightskyblue;
+        }
+    </style>
 </head>
 <body>
     <div class="dcool_header">
         <button type="button" class="btn btn-default" id="userInfoBtn">User Info</button>
     </div>
     <div class="dcool_content">
-
+        <div class="userContentDiv Photo"></div>
+        <div class="userContentDiv Music"></div>
     </div>
     <div class="dcool_treil">
 
