--- a/dcool/src/main/resources/static/html/welcome.html
+++ b/dcool/src/main/resources/static/html/welcome.html
@@ -6,14 +6,39 @@
     <link rel="stylesheet" href="../css/main.css">
     <!-- Bootstrap -->
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /*导航栏*/
+        .navbar-fixed-top{
+            height: 90px;
+            padding-top: 15px;
+        }
+
+        .navbar-fixed-top li{
+            font-size: 15px;
+        }
+    </style>
 </head>
 <body>
     <div class="dcool_header">
-        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#loginModal">Sign</button>
-        <button type="button" class="btn btn-link">Exit</button>
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#registerModal">
-            Register
-        </button>
+        <!--<button type="button" class="btn btn-link" data-toggle="modal" data-target="#loginModal">Sign</button>-->
+        <!--<button type="button" class="btn btn-link">Exit</button>-->
+        <!--<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#registerModal">-->
+            <!--Register-->
+        <!--</button>-->
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+                <ul class="nav navbar-nav">
+                    <li style="margin-right: 50px;"><a href="#" class="navbar-link">Mark</a></li>
+                    <li style="margin-right: 50px;"><a href="#" class="navbar-link">Mark</a></li>
+                    <li style="margin-right: 50px;"><a href="#" class="navbar-link">Mark</a></li>
+                    <li style="margin-right: 50px;"><a href="#" class="navbar-link">Mark</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a data-toggle="modal" href="#loginModal">Login</a></li>
+                    <li><a data-toggle="modal" href="#registerModal">Register</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
     <div class="dcool_content">
 
